# demo-devenv.sh

./: .gitignore  README.md  devenv.nix  pyproject.toml
db/: userdb.sql
src/: main.py
