[tool.poetry]
name = "slides"
version = "0.1.0"
description = ""
authors = ["CaptainEureka <captaineureka@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.1.9"
prettytable = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
